// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler: integration tests function mode 1`] = `
"const _Vue = Vue

return function render(_ctx, _cache) {
  with (_ctx) {
    const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock, createCommentVNode: _createCommentVNode, createTextVNode: _createTextVNode, Fragment: _Fragment, renderList: _renderList } = _Vue

    return (_openBlock(), _createBlock(\\"div\\", {
      id: \\"foo\\",
      class: bar.baz
    }, [
      _createTextVNode(_toDisplayString(world.burn()) + \\" \\", 1 /* TEXT */),
      ok
        ? (_openBlock(), _createBlock(\\"div\\", { key: 0 }, \\"yes\\"))
        : (_openBlock(), _createBlock(_Fragment, { key: 1 }, [
            _createTextVNode(\\"no\\")
          ], 2112 /* STABLE_FRAGMENT, DEV_ROOT_FRAGMENT */)),
      (_openBlock(true), _createBlock(_Fragment, null, _renderList(list, (value, index) => {
        return (_openBlock(), _createBlock(\\"div\\", null, [
          _createVNode(\\"span\\", null, _toDisplayString(value + index), 1 /* TEXT */)
        ]))
      }), 256 /* UNKEYED_FRAGMENT */))
    ], 2 /* CLASS */))
  }
}"
`;

exports[`compiler: integration tests function mode w/ prefixIdentifiers: true 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock, createCommentVNode: _createCommentVNode, createTextVNode: _createTextVNode, Fragment: _Fragment, renderList: _renderList } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", {
    id: \\"foo\\",
    class: _ctx.bar.baz
  }, [
    _createTextVNode(_toDisplayString(_ctx.world.burn()) + \\" \\", 1 /* TEXT */),
    (_ctx.ok)
      ? (_openBlock(), _createBlock(\\"div\\", { key: 0 }, \\"yes\\"))
      : (_openBlock(), _createBlock(_Fragment, { key: 1 }, [
          _createTextVNode(\\"no\\")
        ], 2112 /* STABLE_FRAGMENT, DEV_ROOT_FRAGMENT */)),
    (_openBlock(true), _createBlock(_Fragment, null, _renderList(_ctx.list, (value, index) => {
      return (_openBlock(), _createBlock(\\"div\\", null, [
        _createVNode(\\"span\\", null, _toDisplayString(value + index), 1 /* TEXT */)
      ]))
    }), 256 /* UNKEYED_FRAGMENT */))
  ], 2 /* CLASS */))
}"
`;

exports[`compiler: integration tests module mode 1`] = `
"import { toDisplayString as _toDisplayString, createVNode as _createVNode, openBlock as _openBlock, createBlock as _createBlock, createCommentVNode as _createCommentVNode, createTextVNode as _createTextVNode, Fragment as _Fragment, renderList as _renderList } from \\"vue\\"

export function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", {
    id: \\"foo\\",
    class: _ctx.bar.baz
  }, [
    _createTextVNode(_toDisplayString(_ctx.world.burn()) + \\" \\", 1 /* TEXT */),
    (_ctx.ok)
      ? (_openBlock(), _createBlock(\\"div\\", { key: 0 }, \\"yes\\"))
      : (_openBlock(), _createBlock(_Fragment, { key: 1 }, [
          _createTextVNode(\\"no\\")
        ], 2112 /* STABLE_FRAGMENT, DEV_ROOT_FRAGMENT */)),
    (_openBlock(true), _createBlock(_Fragment, null, _renderList(_ctx.list, (value, index) => {
      return (_openBlock(), _createBlock(\\"div\\", null, [
        _createVNode(\\"span\\", null, _toDisplayString(value + index), 1 /* TEXT */)
      ]))
    }), 256 /* UNKEYED_FRAGMENT */))
  ], 2 /* CLASS */))
}"
`;
